@startuml

title __CONTROLLER's Class Diagram__\n


        class controller.Controller {
            + Controller()
            + addNewGrup()
            + addNewPersona()
            + addRelacionGrupPersona()
            + getAllAllotjaments()
            + getAllComarques()
            + getAllGrupsPerNom()
            + getAllGrupsPerPersona()
            + getAllLocalitats()
            + getAllRutesPerNom()
            + getAllTramsEtapaTrackByRutaId()
            + getIdGrupByName()
            + getLocalitatByID()
            + getLocalitat_y_EtapaByID()
            + getLocalitat_y_PuntDePasById()
            + getRutaById()
            + getSessionMemory()
            + getTramEtapaById()
            + getTramTrackById()
            + loguejarPersona()
            + loguejarSociStatus()
            + recuperarContrasenya()
            + validatePassword()
            + validateRegistrePersona()
            + validateUsername()
        }

        class controller.SessionMemory {
            ~ correuPersona : String
            ~ idAllotjament : Integer
            ~ idGrup : Integer
            ~ idLocalitzacio : Integer
            ~ idPuntDePas : Integer
            ~ idRuta : Integer
            ~ idTram : Integer
            + SessionMemory()
            + getCorreuPersona()
            + getIdAllotjament()
            + getIdGrup()
            + getIdLocalitzacio()
            + getIdPuntDePas()
            + getIdRuta()
            + getIdTram()
            + setCorreuPersona()
            + setIdAllotjament()
            + setIdGrup()
            + setIdLocalitzacio()
            + setIdPuntDePas()
            + setIdRuta()
            + setIdTram()
        }

  controller.Controller o-- resources.ResourcesFacade : inicialitzador
  controller.Controller o-right- model.ModelFacade : modelFacade
  model.ModelFacade - model.TripUB: uses
  controller.Controller o-- controller.SessionMemory : sessionMemory
  controller.Controller o-right- model.TripUB : tripUB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
